04-volumes.yaml

apiVersion: v1
kind: Pod
metadata: 
  name: ebs-static
spec:
  # nodeselector:
  #   topology.kubernetes.io/zone: us-east-1c
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: ebs-static
      mountPath: /usr/share/nginx/html
  volumes:
  - name: ebs-static
    persistentVolumeClaim: 
      claimName: ebs-static


 #kubectl get pod -o wide
#kubectl get nodes --show-labels
