07-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  namespace: helmdemoproject-3
spec: 
 containers:   
 - name: nginx
   image: nginx
