08-affinity.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  namespace: expense
spec:
 affinity:
  nodeAffinity:
   requiredDuringSchedulingIgnoreDuringExecution:
    nodeSelectorTerms:
    - matchExpressions:
      - key: hardware
        operator: In
        values: 
        - gpu 
 containers:   
 - name: nginx
   image: nginx
 tolerations:
 - key: "hardware"
   operator: "Equal"
   value: "gpu"
   effect: "NoSchedule"
