09-podaffinity.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-1
spec:
containers:   
- name: nginx
  image: nginx

---
