01-Replicamultipods.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
   app: nginx
   tier: backend
spec:
 selector:
   tier: frontend
   app: nginx
 ports:
  - name: nginx-service
    protocol: TCP
    port: 80
    targetport: 80
