05-storageclass.yaml

apiVersion: v1
kind: Pod
metadata:
 name: ebs-dynamic
 labels:
  name: dynamostorage
spec:
 containers:
 - name: nginx
   image: nginx
   volumeMounts:
   - name: ebs-dyanamic
     mountpath: /usr/share/nginx/html
 volumes:
 - name: ebs-dyamnic
   persistentVolumeClaim:
    claimName: ebs-dynamic

---

apiVersion: v1
kind: Service
metadata: 
 name: ebs-dynamic
spec:
 type: LoadBalancer
 selector:
  name: dynamostorage
 ports:
 - name: nginx-svc-port
   protocol: TCP
   port: 80
   targetPort: 80
