13-efs-dynamic.yaml

apiVersion: v1
kind: Pod
metadata:
 name: efs-dyn-pod
 labels:
  name: check-dyno
spec:
 containers:
 - name: nginx
   image: nginx
   volumeMounts:
   - name: efs-dyna
     mountPath: /usr/share/nginx/html
 volumes:
 - name: efs-dyna
   persistentVolumeClaim:
    claimName: efs-pvc-dyna

---

apiVersion: v1
kind: Service
metadata:
 name: efs-svc
spec:
 selector:
  name: check-dyno
 ports:
 - name: nginx-svc
   protocol: TCP
   port: 80
   targetPort: 80
   nodePort: 30007
