backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend
 namespace: project-k8
 labels:
  env: dev
  name: project-k8
spec:
 replicas: 3
 selector:
  matchLabels:
   project: K8
   env: dev
   tier: backend
 template:
  metadata:
   name: project-k8
   labels:
     project: K8
     env: dev
     tier: backend
  spec:
   imagePullSecrets:  #for practice used MINIKube so to pull images from our Private ECR we create a ecr-secret and passing from here to enable minikube to pull image
   - name: ecr-secret 
   containers:
   - name: todo-backend
     image: 589820790160.dkr.ecr.us-east-1.amazonaws.com/backend:v1
     ports:
     - port: 8080

---
apiVersion: v1
kind: Service
metadata:
 name: backend-service
spec:
 selector:
  project: K8
  env: dev
  tier: backend
 ports:
 - port: 8080
   targetPort: 8080
