frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: frontend
 namespace: project-k8
 labels:
  env: dev
  name: project-k8
spec:
 replicas: 3
 selector:
  matchLabels:
   project: k8
   env: dev 
   tier: frontend
 template:
  metadata:
   name: project-k8
   labels:
     project: K8
     env: dev
     tier: frontend
  spec:
   imagePullSecrets:  #for practice used MINIKube so to pull images from our Private ECR we create a ecr-secret and passing from here to enable minikube to pull image
   - name: ecr-secret 
   containers:
   - name: frontend
     image: 589820790160.dkr.ecr.us-east-1.amazonaws.com/frontend:v1
     ports:
     - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
 name: frontend-service
 namespace: project-k8
spec:
 type: NodePort
 selector:
   project: K8
   env: dev
   tier: frontend
 ports:
 - port: 80
   targetPort: 80
   nodePort: 30001
